# mcp-hello-rust-server

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md
.github/: dependabot.yml
.github/workflows/: cargo-audit.yml  ci.yml  dependabot-auto-merge.yml  image-scan.yml  publish-dockerhub.yml  publish.yml  scan-scheduled.yml
src/: greetings.rs  lib.rs  main.rs  server.rs
tests/: server.rs
