[package]
name = "mcp-hello-rust-server"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT"
description = "A minimal MCP server in Rust: a server_info health check and a multilingual greeting tool"
authors = ["Mitch Allen <npm@mitchallen.com>"]
repository = "https://github.com/mitchallen/mcp-hello-rust-server"
homepage = "https://github.com/mitchallen/mcp-hello-rust-server"
keywords = ["mcp", "rmcp", "hello", "greeting", "starter"]
readme = "README.md"

[[bin]]
name = "mcp-hello-rust-server"
path = "src/main.rs"

[dependencies]
# The Rust MCP SDK. `server` + `macros` provide the ServerHandler / #[tool]
# machinery; `transport-io` is the stdio transport; `transport-streamable-http-server`
# lets the same binary serve over HTTP (the container default).
rmcp = { version = "2.2", features = [
    "server",
    "macros",
    "schemars",
    "transport-io",
    "transport-streamable-http-server",
] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "signal", "net"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
axum = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "std", "fmt"] }

[dev-dependencies]
# Pull in the client side of rmcp for tests only. dev-dependencies are not
# compiled into `cargo build --release`, so the client feature never bloats the
# shipped binary — it only exists to drive the server in-process from tests
# (the Rust analog of the Python suite's in-memory FastMCP client).
rmcp = { version = "2.2", features = ["client"] }
tokio = { version = "1", features = ["full"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"
